am idiot part 2

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
     "main" : "nodeServer.js",
     "scripts": {
         "start": "node ./nodeServer.js"
+    },
+    "dependencies": {
+        "express": "*"
     }
 }
